Fix tf-idf model. Code edits.

--- a/similarity_excercise.ipynb
+++ b/similarity_excercise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,8 @@
     "    \"The intersection graph of paths in trees\",\n",
     "    \"Graph minors IV Widths of trees and well quasi ordering\",\n",
     "    \"Graph minors A survey\",\n",
-    "    \"Pocahontas is a social human who likes interaction\"\n",
+    "    \"Pocahontas is a social human who likes interaction\",\n",
+    "    \"There was a shooting in alabama\"\n",
     "]\n",
     "\n",
     "# remove common words and tokenize\n",
@@ -32,221 +33,148 @@
     "# remove words that appear only once\n",
     "frequency = defaultdict(int)\n",
     "for text in texts:\n",
+    "    #print(f\"ON {text}...\")\n",
     "    for token in text:\n",
-    "        frequency[token] += 1\n",
+    "        #print(token)\n",
+    "        frequency[token] += 1 # frequency count\n",
     "\n",
+    "# list of unique words per document in corpus\n",
     "texts = [\n",
     "    [token for token in text if frequency[token] > 1]\n",
     "    for text in texts\n",
     "]\n",
     "\n",
+    "# returns gensim object of dictionary mapping\n",
     "dictionary = corpora.Dictionary(texts)\n",
+    "\n",
+    "# list of tuple(token_id, token_count)\n",
     "corpus = [dictionary.doc2bow(text) for text in texts]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['human', 'social', 'interface', 'computer'],\n",
-       " ['survey', 'user', 'computer', 'system', 'response', 'time'],\n",
-       " ['eps', 'user', 'interface', 'system'],\n",
-       " ['system', 'human', 'social', 'system', 'eps'],\n",
-       " ['user', 'response', 'time'],\n",
-       " ['trees'],\n",
-       " ['graph', 'trees'],\n",
-       " ['graph', 'minors', 'trees'],\n",
-       " ['graph', 'minors', 'survey'],\n",
-       " ['social', 'human']]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "[text for text in texts]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['human', 'social', 'interface', 'computer'],\n",
-       " ['survey', 'user', 'computer', 'system', 'response', 'time'],\n",
-       " ['eps', 'user', 'interface', 'system'],\n",
-       " ['system', 'human', 'social', 'system', 'eps'],\n",
-       " ['user', 'response', 'time'],\n",
-       " ['trees'],\n",
-       " ['graph', 'trees'],\n",
-       " ['graph', 'minors', 'trees'],\n",
-       " ['graph', 'minors', 'survey'],\n",
-       " ['social', 'human']]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "texts"
+    "# also dictionary.token2id()\n",
+    "print(dictionary.keys())\n",
+    "print([dictionary[i] for i in dictionary.keys()])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# (token_id, token_count)\n",
+    "corpus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Contents of dictionary\n",
+    "print(f\"Contents of dictionary: {[dictionary[i] for i in dictionary.keys()]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create LSI model using dictionary as training data\n",
     "from gensim import models\n",
-    "lsi = models.LsiModel(corpus, id2word=dictionary, num_topics=2)"
+    "lsi = models.LsiModel(corpus, id2word=dictionary, num_topics=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc = \"Pocahontas is a person with computer interaction\""
+    "# Output most meaningful words in corpus\n",
+    "lsi.print_topics()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "type(doc)"
+    "#test_doc = \"Girard is a social science student interested in computer science and human computer interaction and natural language processing\"\n",
+    "#test_doc = \"Girard is a mechanic and a mountaineer that likes to cook.\"\n",
+    "\n",
+    "# Add last sentence to bring similarity score up\n",
+    "test_doc = \"We started off early, but by the time we got a glimpse of the Aberdeen glacier, there were two parties midway through the ice pitch already. We could barely make them out from a far, and it seemed like the wall was not that much of a deal. It was pretty daunting once you get close enought to appreciate the massive ice formation.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(0, 0.2330918031540606), (1, -0.10156362666135244)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "vec_bow = dictionary.doc2bow(doc.lower().split())\n",
-    "vec_lsi = lsi[vec_bow]  # convert the query to LSI space\n",
+    "vec_bow = dictionary.doc2bow(test_doc.lower().split())\n",
+    "vec_lsi = lsi[vec_bow]  # convert the query test_doc to LSI matrix and calculate cosine similarity against the lsi model\n",
     "print(vec_lsi)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(0, 0.2330918031540606), (1, -0.10156362666135244)]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vec_lsi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'computer': 0,\n",
-       " 'human': 1,\n",
-       " 'interface': 2,\n",
-       " 'social': 3,\n",
-       " 'response': 4,\n",
-       " 'survey': 5,\n",
-       " 'system': 6,\n",
-       " 'time': 7,\n",
-       " 'user': 8,\n",
-       " 'eps': 9,\n",
-       " 'trees': 10,\n",
-       " 'graph': 11,\n",
-       " 'minors': 12}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dictionary.token2id"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from gensim import similarities\n",
-    "index = similarities.MatrixSimilarity(lsi[corpus])  # transform corpus to LSI space and index it"
+    "index = similarities.MatrixSimilarity(lsi[corpus])"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
+   "source": [
+    "index.get_similarities(test_doc, vec_lsi)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "source": [
     "index.save('/tmp/deerwester.index')\n",
     "index = similarities.MatrixSimilarity.load('/tmp/deerwester.index')"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "documents"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(0, 0.55212295), (1, 0.96431756), (2, 0.9214136), (3, 0.65517575), (4, 0.8458402), (5, 0.43049815), (6, 0.45229146), (7, 0.46063223), (8, 0.59685427), (9, 0.3227335)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sims = index[vec_lsi]  # perform a similarity query against the corpus\n",
     "print(list(enumerate(sims)))  # print (document_number, document_similarity) 2-tuples"
@@ -254,26 +182,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.96431756 A survey of user opinion of computer system response time\n",
-      "0.9214136 The EPS user interface management system\n",
-      "0.8458402 Relation of user perceived response time to error measurement\n",
-      "0.65517575 System and human social system engineering testing of EPS\n",
-      "0.59685427 Graph minors A survey\n",
-      "0.55212295 Human machine social interface for lab abc computer applications\n",
-      "0.46063223 Graph minors IV Widths of trees and well quasi ordering\n",
-      "0.45229146 The intersection graph of paths in trees\n",
-      "0.43049815 The generation of random binary unordered trees\n",
-      "0.3227335 Pocahontas is a social human who likes interaction\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sims = sorted(enumerate(sims), key=lambda item: -item[1])\n",
     "for doc_position, doc_score in sims:\n",
@@ -282,49 +193,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1, 0.96431756),\n",
-       " (2, 0.9214136),\n",
-       " (4, 0.8458402),\n",
-       " (3, 0.65517575),\n",
-       " (8, 0.59685427),\n",
-       " (0, 0.55212295),\n",
-       " (7, 0.46063223),\n",
-       " (6, 0.45229146),\n",
-       " (5, 0.43049815),\n",
-       " (9, 0.3227335)]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sims"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "list"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(documents)"
    ]
