--- a/gensim.ipynb
+++ b/gensim.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,68 +22,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "                                     wanderingscribe  \\\n",
-       "0  # Extracted from http://wanderingscribe.blogsp...   \n",
-       "1  In case you were wondering... the paperback of...   \n",
-       "2  December probably isn't the time for it, but I...   \n",
-       "3  Sometimes I give in to dreams —  dream that on...   \n",
-       "4  In the meantime though, it's hard graft and sc...   \n",
-       "\n",
-       "                           homelesschroniclesintampa  \\\n",
-       "0  #IWSG - JANUARY 2019 - CHECK IN - A NEW ME??? ...   \n",
-       "1                                             Gee,\\n   \n",
-       "2  this is a great question, and before I ever wr...   \n",
-       "3  play the viola. Then, I came down with essenti...   \n",
-       "4  neuro-muscular disorder (my mom was afflicted ...   \n",
-       "\n",
-       "                       livinghomelessourwritetospeak  \\\n",
-       "0                                      Another one\\n   \n",
-       "1  Its been some time since I actually have writt...   \n",
-       "2  I am presently having a great meal as I write ...   \n",
-       "3  Back when I last posted, I was running a new b...   \n",
-       "4  I actually had myself a big slip and started u...   \n",
-       "\n",
-       "                                     seattlehomeless  \\\n",
-       "0                                 # Archived posts\\n   \n",
-       "1  # Extracted from https://seattlehomeless.blogs...   \n",
-       "2  Ok, it's all relative.  Seattle is hot at 80 d...   \n",
-       "3  So tonight one of our local politicians, Seatt...   \n",
-       "4                            Here's what he saw:  \\n   \n",
-       "\n",
-       "                                            homevan  \\\n",
-       "0                     HOME VAN NEWSLETTER 6/12/16\\n   \n",
-       "1                     HOME VAN NEWSLETTER 1/18/16\\n   \n",
-       "2  HOLIDAY ANGELS DISGUISED AS HOMELESS STRANGERS\\n   \n",
-       "3                    HOME VAN NEWSLETTER 11/15/15\\n   \n",
-       "4                     HOME VAN NEWSLETTER 10/4/15\\n   \n",
-       "\n",
-       "                                         joe-anybody  \\\n",
-       "0                        House Keys Not Handcuffs \\n   \n",
-       "1                      A (sticker) and a good idea\\n   \n",
-       "2                                  - Portland 2018\\n   \n",
-       "3                                           - WRAP\\n   \n",
-       "4  On 9/28/15 in Portland Oregon I filmed this in...   \n",
-       "\n",
-       "                                    thehomelessfinch  \n",
-       "0  The Homeless Finch Has Found Her Nest: Project...  \n",
-       "1       The Homeless Finch Makes It's First Rescue\\n  \n",
-       "2  The Start of Something New for The Homeless Fi...  \n",
-       "3  Jehane Lyle, Watercolor on paper, \"Cuppa\" - de...  \n",
-       "4  This week has been a complete blast.  Getting ...  "
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>wanderingscribe</th>\n      <th>homelesschroniclesintampa</th>\n      <th>livinghomelessourwritetospeak</th>\n      <th>seattlehomeless</th>\n      <th>homevan</th>\n      <th>joe-anybody</th>\n      <th>thehomelessfinch</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td># Extracted from http://wanderingscribe.blogsp...</td>\n      <td>#IWSG - JANUARY 2019 - CHECK IN - A NEW ME??? ...</td>\n      <td>Another one\\n</td>\n      <td># Archived posts\\n</td>\n      <td>HOME VAN NEWSLETTER 6/12/16\\n</td>\n      <td>House Keys Not Handcuffs \\n</td>\n      <td>The Homeless Finch Has Found Her Nest: Project...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>In case you were wondering... the paperback of...</td>\n      <td>Gee,\\n</td>\n      <td>Its been some time since I actually have writt...</td>\n      <td># Extracted from https://seattlehomeless.blogs...</td>\n      <td>HOME VAN NEWSLETTER 1/18/16\\n</td>\n      <td>A (sticker) and a good idea\\n</td>\n      <td>The Homeless Finch Makes It's First Rescue\\n</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>December probably isn't the time for it, but I...</td>\n      <td>this is a great question, and before I ever wr...</td>\n      <td>I am presently having a great meal as I write ...</td>\n      <td>Ok, it's all relative.  Seattle is hot at 80 d...</td>\n      <td>HOLIDAY ANGELS DISGUISED AS HOMELESS STRANGERS\\n</td>\n      <td>- Portland 2018\\n</td>\n      <td>The Start of Something New for The Homeless Fi...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Sometimes I give in to dreams —  dream that on...</td>\n      <td>play the viola. Then, I came down with essenti...</td>\n      <td>Back when I last posted, I was running a new b...</td>\n      <td>So tonight one of our local politicians, Seatt...</td>\n      <td>HOME VAN NEWSLETTER 11/15/15\\n</td>\n      <td>- WRAP\\n</td>\n      <td>Jehane Lyle, Watercolor on paper, \"Cuppa\" - de...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>In the meantime though, it's hard graft and sc...</td>\n      <td>neuro-muscular disorder (my mom was afflicted ...</td>\n      <td>I actually had myself a big slip and started u...</td>\n      <td>Here's what he saw:  \\n</td>\n      <td>HOME VAN NEWSLETTER 10/4/15\\n</td>\n      <td>On 9/28/15 in Portland Oregon I filmed this in...</td>\n      <td>This week has been a complete blast.  Getting ...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 2
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.read_csv('blog_spot.csv', index_col=0)\n",
     "df.head()"
@@ -100,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,11 +79,11 @@
     "\n",
     "Before:\n",
     "\n",
-    "'# Extracted from http://wanderingscribe.blogspot.com/\\n,#IWSG - JANUARY 2019 - CHECK IN - A NEW ME??? I CERTAINLY HOPE SO!\\n,Another one\\n,# Archived posts\\n,HOME VAN NEWSLETTER 6/12/16\\n,House Keys Not Handcuffs\\xa0\\n,The Homeless Finch Has Found Her Nest: Projects, Plans and Peace\\n'\n",
+    "> '# Extracted from http://wanderingscribe.blogspot.com/\\n,#IWSG - JANUARY 2019 - CHECK IN - A NEW ME??? I CERTAINLY HOPE SO!\\n,Another one\\n,# Archived posts\\n,HOME VAN NEWSLETTER 6/12/16\\n,House Keys Not Handcuffs\\xa0\\n,The Homeless Finch Has Found Her Nest: Projects, Plans and Peace\\n'\n",
     "\n",
     "After:\n",
     "\n",
-    "['extracted', 'wanderingscribe', 'blogspot', 'iwsg',...\n"
+    "> ['extracted', 'wanderingscribe', 'blogspot', 'iwsg',...\n"
    ]
   },
   {
@@ -155,17 +96,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "The word homeless appears 1971 times in the corpus\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import defaultdict\n",
     "\n",
@@ -182,6 +115,13 @@
    ]
   },
   {
+   "source": [
+    "> The word homeless appears 1971 times in the corpus"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -191,34 +131,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "[('nan', 5232),\n",
-       " ('homeless', 1971),\n",
-       " ('people', 1803),\n",
-       " ('night', 1048),\n",
-       " ('time', 934),\n",
-       " ('nightwatch', 860),\n",
-       " ('know', 807),\n",
-       " ('going', 770),\n",
-       " ('shelter', 750),\n",
-       " ('got', 687)]"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 6
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import Counter\n",
     "c = Counter(frequency)\n",
     "c.most_common(10)"
    ]
+  },
+  {
+   "source": [
+    "> [('nan', 5232),\n",
+    " ('homeless', 1971),\n",
+    " ('people', 1803),\n",
+    " ('night', 1048),\n",
+    " ('time', 934),\n",
+    " ('nightwatch', 860),\n",
+    " ('know', 807),\n",
+    " ('going', 770),\n",
+    " ('shelter', 750),\n",
+    " ('got', 687)]"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
@@ -230,17 +166,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[['blogspot', 'com', 'iwsg', 'january', 'check', 'new', 'certainly', 'hope', 'another', 'posts', 'home', 'van', 'newsletter', 'house', 'keys', 'homeless', 'finch', 'found', 'projects', 'plans', 'peace'], ['case', 'wondering', 'book', 'new', 'cover', 'th', 'november', 'cover', 'looks', 'sure', 'pink', 'white', 'time', 'actually', 'written', 'post', 'blog', 'figured', 'time', 'update', 'readers', 'past', 'year', 'bit', 'blogspot', 'com', 'home', 'van', 'newsletter', 'good', 'idea', 'homeless', 'finch', 'makes', 'first', 'rescue']]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# output words appearing at least n times\n",
     "n = 10\n",
@@ -249,24 +177,31 @@
    ]
   },
   {
+   "source": [
+    "> [['blogspot', 'com', 'iwsg', 'january', 'check', 'new', 'certainly', 'hope', 'another', 'posts', 'home', 'van', 'newsletter', 'house', 'keys', 'homeless', 'finch', 'found', 'projects', 'plans', 'peace'], ['case', 'wondering', 'book', 'new', 'cover', 'th', 'november', 'cover', 'looks', 'sure', 'pink', 'white', 'time', 'actually', 'written', 'post', 'blog', 'figured', 'time', 'update', 'readers', 'past', 'year', 'bit', 'blogspot', 'com', 'home', 'van', 'newsletter', 'good', 'idea', 'homeless', 'finch', 'makes', 'first', 'rescue']]"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Create dictionary keys\n",
     "Now that we have a list of all the words in the corpus, we can create a dictionary to map any future comparison to. These will be assigned a unique token_id for every token or word in the corpus. What we'll end up with is a bag-of-words with unique identifiers for words in our entire corpus. Note the difference between `processed_corpus` and `bow_corpus`, where the former is a untokenized list of context words in our corpus. For this, we will use the built-in `corpora` module from the `gensim` library to make things easy.\n",
     "\n",
-    "Sample output:\n",
+    "### Sample output:\n",
     "\n",
     "dictionary.token2id:\n",
-    "{'check': 0, 'home': 1, 'homeless': 2, 'hope': 3...\n",
+    "> {'check': 0, 'home': 1, 'homeless': 2, 'hope': 3...\n",
     "\n",
     "bow_corpus:\n",
-    "[(2, 4), (3, 1), (4, 1), (5, 2), (6, 9)..."
+    "> [(2, 4), (3, 1), (4, 1), (5, 2), (6, 9)..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,17 +224,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "The words: ['day', 'happy', 'nice'] are in our dictionary. No biggie.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Modify for testing\n",
     "example_doc = \"it's a nice and sunny day outside, i'm so happy\"\n",
@@ -317,6 +244,13 @@
    ]
   },
   {
+   "source": [
+    "> The words: ['day', 'happy', 'nice'] are in our dictionary. No biggie.\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -327,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,9 +276,9 @@
     "### bow representation to tf-idf weights\n",
     "This gives us a measure of the frequency of a word (i.e. assumed relevance) given a corpus of documents.\n",
     "\n",
-    "Sample tfidf[dictionary.doc2bow(sample)] output:\n",
+    "Sample `tfidf[dictionary.doc2bow(sample)]` output:\n",
     "\n",
-    "[(0, 0.017154431730943658), (1, 0.020673564600620076), (2, 0.033339482607518046)..."
+    "> [(0, 0.017154431730943658), (1, 0.020673564600620076), (2, 0.033339482607518046)..."
    ],
    "cell_type": "markdown",
    "metadata": {
@@ -363,17 +297,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Tfidf weight of unrelated_doc: \n[(494, 0.5792698834554537), (1630, 0.5662128359240098), (2361, 0.5863867550997339)]\n\nTfidf weight of related_doc: \n[(8, 0.15950015416535915), (191, 0.3193789464903235), (241, 0.30415827237259907), (353, 0.6306102318406809), (1234, 0.6183649975581706)]\n\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "example_doc1 = \"I am a student and I like to study natural language processing and computer science.\"\n",
     "unrelated_doc = example_doc1.lower().split()\n",
@@ -392,6 +318,17 @@
    ]
   },
   {
+   "source": [
+    ">Tfidf weight of unrelated_doc: \n",
+    ">[(494, 0.5792698834554537), (1630, 0.5662128359240098), (2361, 0.5863867550997339)]\n",
+    ">\n",
+    ">Tfidf weight of related_doc: \n",
+    ">[(8, 0.15950015416535915), (191, 0.3193789464903235), (241, 0.30415827237259907), (353, 0.6306102318406809), (1234, 0.6183649975581706)]\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -403,17 +340,17 @@
    "metadata": {},
    "source": [
     "### Save model to disk\n",
-    "TODO\n",
-    "\n",
-    "import os\n",
-    "import tempfile\n",
-    "\n",
-    "with tempfile.NamedTemporaryFile(prefix='model-', suffix='.lsi', delete=False) as tmp:\n",
-    "    lsi_model.save(tmp.name)  # same for tfidf, lda, ...\n",
-    "\n",
-    "loaded_lsi_model = models.LsiModel.load(tmp.name)\n",
-    "\n",
-    "os.unlink(tmp.name)"
+    "> TODO\n",
+    "> \n",
+    "> import os\n",
+    "> import tempfile\n",
+    "> \n",
+    "> with tempfile.NamedTemporaryFile(prefix='model-', suffix='.lsi', delete=False) as tmp:\n",
+    ">     lsi_model.save(tmp.name)  # same for tfidf, lda, ...\n",
+    "> \n",
+    "> loaded_lsi_model = models.LsiModel.load(tmp.name)\n",
+    "> \n",
+    "> os.unlink(tmp.name)"
    ]
   },
   {
@@ -426,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,22 +382,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "\n",
-      "Topics generated with BOW:\n",
-      "[(0, '0.411*\"homeless\" + 0.341*\"people\" + 0.257*\"nan\" + 0.180*\"city\" + 0.151*\"night\" + 0.148*\"time\" + 0.146*\"shelter\" + 0.126*\"know\" + 0.125*\"life\" + 0.116*\"going\"'), (1, '0.805*\"nan\" + -0.270*\"homeless\" + -0.178*\"city\" + -0.142*\"police\" + -0.120*\"people\" + -0.107*\"pam\" + 0.100*\"night\" + 0.099*\"nightwatch\" + -0.084*\"homelessness\" + -0.082*\"law\"')]\n",
-      "\n",
-      "Topics generated with tf-idf weights:\n",
-      "[(0, '0.155*\"homeless\" + 0.149*\"people\" + 0.136*\"night\" + 0.122*\"nightwatch\" + 0.109*\"shelter\" + 0.105*\"time\" + 0.104*\"seattle\" + 0.102*\"going\" + 0.098*\"know\" + 0.098*\"city\"'), (1, '-0.229*\"night\" + -0.223*\"shelter\" + -0.212*\"nightwatch\" + -0.184*\"seattle\" + -0.178*\"women\" + -0.157*\"bar\" + 0.150*\"life\" + -0.115*\"city\" + -0.109*\"operation\" + 0.104*\"justice\"')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# BOW -> LSI\n",
     "lsi_bow = models.LsiModel(bow_corpus, id2word=dictionary, num_topics=NUM_TOPICS)\n",
@@ -479,6 +403,17 @@
     "Aside from having to do some more clean up, it's interesting to note the difference in words included in the generated topic by the LSI model. I'd have to dig deeper as to why, but based on what I've understood, the difference could be coming from the factoring in of term frequencies across documents (the idf part) which effectively penalizes the model for words that occur too frequent in the corpus, but have no semantic meaning within a document.\n",
     "\n",
     "Considering that the corpus is comprised of homeless blogs for example, one has to ask whether the word `homeless` actually carries much meaning in the corpus? Remember that BOW simply does a frequency count of words in a document, but does not account for justifiably meaningless words (functional words) that appear too frequent across the collection of documents. TF-IDF weights does exactly that - it adjusts (penalizes) for words that are too common to bear actual meaning (context words) for the document."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "> Topics generated with BOW:\n",
+    "> [(0, '0.411*\"homeless\" + 0.341*\"people\" + 0.257*\"nan\" + 0.180*\"city\" + 0.151*\"night\" + 0.148*\"time\" + 0.146*\"shelter\" + 0.126*\"know\" + 0.125*\"life\" > + 0.116*\"going\"'), (1, '0.805*\"nan\" + -0.270*\"homeless\" + -0.178*\"city\" + -0.142*\"police\" + -0.120*\"people\" + -0.107*\"pam\" + 0.100*\"night\" + > 0.099*\"nightwatch\" + -0.084*\"homelessness\" + -0.082*\"law\"')]\n",
+    "> \n",
+    "> Topics generated with tf-idf weights:\n",
+    "> [(0, '0.155*\"homeless\" + 0.149*\"people\" + 0.136*\"night\" + 0.122*\"nightwatch\" + 0.109*\"shelter\" + 0.105*\"time\" + 0.104*\"seattle\" + 0.102*\"going\" + > 0.098*\"know\" + 0.098*\"city\"'), (1, '-0.229*\"night\" + -0.223*\"shelter\" + -0.212*\"nightwatch\" + -0.184*\"seattle\" + -0.178*\"women\" + -0.157*\"bar\" + > 0.150*\"life\" + -0.115*\"city\" + -0.109*\"operation\" + 0.104*\"justice\"')]"
    ],
    "cell_type": "markdown",
    "metadata": {}
