--- a/nlp/similarity_excercise.ipynb
+++ b/nlp/similarity_excercise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 32
     }
    ],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 34
     }
    ],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -170,11 +170,11 @@
      "data": {
       "text/plain": [
        "[(0,\n",
-       "  '0.624*\"system\" + 0.324*\"user\" + 0.323*\"social\" + 0.323*\"human\" + 0.300*\"eps\" + 0.233*\"computer\" + 0.209*\"interface\" + 0.204*\"response\" + 0.204*\"time\" + 0.161*\"survey\"')]"
+       "  '0.624*\"system\" + 0.324*\"user\" + 0.323*\"social\" + 0.323*\"human\" + 0.300*\"eps\" + 0.233*\"computer\" + 0.209*\"interface\" + 0.204*\"time\" + 0.204*\"response\" + 0.161*\"survey\"')]"
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 37
     }
    ],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,19 +192,19 @@
     "#test_doc = \"Girard is a mechanic and a mountaineer that likes to cook.\"\n",
     "\n",
     "# Add last sentence to bring similarity score up\n",
-    "test_doc = \"We started off early, but by the time we got a glimpse of the Aberdeen glacier, there were two parties midway through the ice pitch already. We could barely make them out from a far, and it seemed like the wall was not that much of a deal. It was pretty daunting once you get close enought to appreciate the massive ice formation.\""
+    "test_doc = \"pocahontas is a human\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[(0, 0.20380793062023445)]\n"
+      "[(0, 0.3226348925536486)]\n"
      ]
     }
    ],
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 41
     }
    ],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 44
     }
    ],
    "source": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 45
     }
    ],
    "source": [
